# wire

wire/: package.xml
wire_core/: CMakeLists.txt  package.xml
wire_core/include/wire/: WorldModelROS.h
wire_core/include/wire/core/: ClassModel.h  Evidence.h  EvidenceSet.h  IStateEstimator.h  Property.h  PropertySet.h
wire_core/include/wire/logic/: Assignment.h  AssignmentMatrix.h  AssignmentSet.h  HypothesesTree.h  Hypothesis.h
wire_core/include/wire/models/: FixedState.h
wire_core/include/wire/storage/: KnowledgeDatabase.h  ObjectStorage.h  SemanticObject.h
wire_core/include/wire/util/: ObjectModelParser.h
wire_core/launch/: custom_rosconsole.conf  start.launch
wire_core/models/: world_object_models.xml  world_object_models.yaml
wire_core/src/: WorldModelROS.cpp
wire_core/src/core/: ClassModel.cpp  Evidence.cpp  EvidenceSet.cpp  Property.cpp  PropertySet.cpp
wire_core/src/logic/: Assignment.cpp  AssignmentMatrix.cpp  AssignmentSet.cpp  HypothesesTree.cpp  Hypothesis.cpp
wire_core/src/models/: FixedState.cpp
wire_core/src/storage/: KnowledgeDatabase.cpp  ObjectStorage.cpp  SemanticObject.cpp
wire_core/src/util/: ObjectModelParser.cpp
wire_features_lib/: CMakeLists.txt  package.xml
wire_features_lib/include/: circle.h  featureProbabilities.h  featureProperties.h  local_params.h  rectangle.h
wire_features_lib/src/: circle.cpp  featureProbabilities.cpp  featureProperties.cpp  rectangle.cpp
wire_msgs/: CMakeLists.txt
wire_state_estimators/: CMakeLists.txt  models_plugin.xml  package.xml
wire_state_estimators/include/: DiscreteFilter.h  FixedState.h  KalmanFilter.h  MultiModelFilter.h  PositionAndDimensionFilter.h  PositionFilter.h  featureProperties.h
wire_state_estimators/include/wire_state_estimators/: DiscreteFilter.h  FixedState.h  KalmanFilter.h  MultiModelFilter.h  PositionAndDimensionFilter.h  PositionFilter.h  featureProperties.h
wire_state_estimators/src/: .PositionAndDimensionFilter.cpp.kate-swp  DiscreteFilter.cpp  FixedState.cpp  KalmanFilter.cpp  MultiModelFilter.cpp  PositionAndDimensionFilter.cpp  PositionFilter.cpp  featureProperties.cpp
wire_tutorials/: CMakeLists.txt
wire_tutorials/config/: rviz_world_model_kinetic.rviz
wire_tutorials/launch/: rviz_wire_kinetic.launch
wire_tutorials/src/: generate_evidence.cpp  get_world_state.cpp
wire_viz/: CMakeLists.txt
wire_viz/include/: Visualizer.h
wire_viz/parameters/: detections.yaml
wire_viz/src/: Visualizer.cpp
