<package>
  <name>wire_features_lib</name>
  <version>0.0.1</version>
  <description>
     wire_features_lib
  </description>
  <maintainer email="w.houtman@tue.nl">Wouter Houtman</maintainer>
  <license>BSD</license>
  <!--url type="website">http://ros.org/wiki/wire_msgs</url-->
  <buildtool_depend>catkin</buildtool_depend>

  <!--build_depend>wire_core</build_depend-->
  <!--build_depend>pluginlib</build_depend-->
  <build_depend>geolib2</build_depend>
  <build_depend>problib</build_depend>
  <build_depend>armadillo_matrix</build_depend>  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>  

  <!--run_depend>wire_core</run_depend-->
  <!--run_depend>pluginlib</run_depend-->
  <run_depend>geolib2</run_depend>
  <run_depend>problib</run_depend>
  <run_depend>armadillo_matrix</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <export>
    <wire_core plugin="${prefix}/models_plugin.xml" />
  </export>

</package>